[gd_scene load_steps=15 format=3 uid="uid://c5hoj5uwpo50k"]

[ext_resource type="Script" path="res://Battle.gd" id="1_31qin"]
[ext_resource type="Texture2D" uid="uid://cxw4ie7o0tadc" path="res://d9spuwer2c491.webp" id="1_oynqv"]
[ext_resource type="Resource" uid="uid://dlkedmdm12it8" path="res://src/enemy.tres" id="2_47qah"]
[ext_resource type="PackedScene" uid="uid://cqnbf38tcq6wn" path="res://Monster/dragon_poke.tscn" id="2_qbj6r"]
[ext_resource type="FontFile" uid="uid://dmjie0htcxto3" path="res://arcadeclassic (1)/ARCADECLASSIC.TTF" id="3_5lrof"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8ql2"]
bg_color = Color(0.752941, 0.756863, 0.745098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3el0"]
bg_color = Color(0.247059, 0.709804, 0.266667, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_bottom_left = 3
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njrq0"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g0hv5"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo2ma"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_utdjs"]
resource_name = "enemy_damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster/Dragon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jlmdg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster/Dragon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Dragon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ujpdc"]
resource_name = "player_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Dragon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2rxq8"]
_data = {
"RESET": SubResource("Animation_jlmdg"),
"enemy_damage": SubResource("Animation_utdjs"),
"player_damaged": SubResource("Animation_ujpdc")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_31qin")
enemy = ExtResource("2_47qah")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 646.0
texture = ExtResource("1_oynqv")

[node name="Player" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 663.0
offset_top = 201.0
offset_right = 835.0
offset_bottom = 406.0

[node name="ProgressBar" type="ProgressBar" parent="Player"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/background = SubResource("StyleBoxFlat_b8ql2")
theme_override_styles/fill = SubResource("StyleBoxFlat_t3el0")
value = 70.0

[node name="Dragon" parent="Player" instance=ExtResource("2_qbj6r")]
position = Vector2(88, 90)
scale = Vector2(2, 2)

[node name="Monster" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 356.0
offset_right = 434.0
offset_bottom = 561.0

[node name="ProgressBar" type="ProgressBar" parent="Monster"]
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/background = SubResource("StyleBoxFlat_b8ql2")
theme_override_styles/fill = SubResource("StyleBoxFlat_t3el0")
value = 70.0

[node name="Dragon" parent="Monster" instance=ExtResource("2_qbj6r")]
position = Vector2(80, 87)
scale = Vector2(2, 2)

[node name="Action" type="Panel" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_njrq0")

[node name="HBoxContainer" type="HBoxContainer" parent="Action"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.5
offset_top = -25.0
offset_right = 1021.5
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_constants/separation = 30
alignment = 1

[node name="Arm" type="Button" parent="Action/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5lrof")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g0hv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_uo2ma")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uo2ma")
text = "ARM"

[node name="Leg" type="Button" parent="Action/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5lrof")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g0hv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_uo2ma")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uo2ma")
text = "LEG"

[node name="Chest" type="Button" parent="Action/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5lrof")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g0hv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_uo2ma")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uo2ma")
text = "CHEST"

[node name="Appendages" type="Button" parent="Action/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5lrof")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g0hv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_uo2ma")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uo2ma")
text = "APPENDAGES"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2rxq8")
}

[connection signal="pressed" from="Action/HBoxContainer/Arm" to="." method="_on_arm_pressed"]
[connection signal="pressed" from="Action/HBoxContainer/Leg" to="." method="_on_leg_pressed"]
[connection signal="pressed" from="Action/HBoxContainer/Chest" to="." method="_on_chest_pressed"]
[connection signal="pressed" from="Action/HBoxContainer/Appendages" to="." method="_on_appendages_pressed"]
